# video-pipeline-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: app_config.hpp  decoder_interface.hpp  detection.hpp  encoder_interface.hpp  encoder_timing.hpp  ffmpeg_packet_source.hpp  infer_interface.hpp  pipeline_types.hpp  postproc_interface.hpp  preproc_interface.hpp  rga_shared.hpp  visualizer.hpp
include/backends/: cuda_preprocessor.hpp  mpp_decoder.hpp  mpp_encoder.hpp  nvdec_decoder.hpp  nvenc_encoder.hpp  rga_preprocessor.hpp  rknn_infer.hpp  trt_infer.hpp  yolo_postproc.hpp
scripts/: rockchip_output_regression.sh  rockchip_rtsp_regression.sh
src/: app_config.cpp  backend_registry.cpp  encoder_timing.cpp  ffmpeg_packet_source.cpp  main.cpp  pipeline_runner.cpp
src/backends/: cuda_preprocessor.cpp  cuda_preprocessor.cu  decoder_factory.cpp  encoder_factory.cpp  infer_factory.cpp  mpp_decoder.cpp  mpp_encoder.cpp  nvdec_decoder.cpp  nvenc_encoder.cpp  opencv_visualizer.cpp  postproc_factory.cpp  preproc_factory.cpp  rga_preprocessor.cpp  rknn_infer.cpp  trt_infer.cpp  yolo_postproc.cpp
tests/: app_config_test.cpp  encoder_timing_test.cpp  validate_app_config_test.cpp  yolo26_dump_raw.cpp  yolo_postproc_test.cpp
